[metadata]
name = warder
summary = The API frame based on pecan by pyDream
description-file =
    README.rst
author = pyDream
author-email = yangyuanqiang01@gmail.com
classifier =
    Development Status :: 1 - Production/Stable
    Environment :: Open
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    warder
data_files =
    etc/warder =
        etc/warder/warder.conf
    share/warder =
        LICENSE
        README.rst

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py
    warder/tests/
    warder/db/sqlalchemy/
autodoc_index_modules = True
autodoc_exclude_modules =
    warder.tests.*
    warder.db.sqlalchemy.*
api_doc_dir = contributor/modules

[wheel]
universal = 1

[entry_points]
wsgi_scripts =
    warder-wsgi = warder.api.app:setup_app
console_scripts =
    warder-api = warder.cmd.api:main
    warder-db-manage = warder.cmd.db_manage:main
octavia.api.handlers =
    hello_world = warder.api.handlers.helloworld:HelloWorldHandler
oslo.config.opts =
    warder = warder.opts:list_opts

[compile_catalog]
directory = warder/locale
domain = warder

[update_catalog]
domain = warder
output_dir = warder/locale
input_file = warder/locale/warder.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = warder/locale/warder.pot